--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Watches#index</h1>
-<p>Find me in app/views/watches/index.html.erb</p>
+<% @watches.each do |watch| %>
+	<h2><p><%= watch [:name] %></p></h2>
+	<p><%= watch [:brand] %></p>
+
+<% end %>
