include image on watch with paperclip 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 				<p><%= mail_to "hello@timekeep.com" %></p>
 				</div>
 
-			<div> class="social"
+			<div class="social"
 				<%# social_link_to :facebook %>
 				<%# social_link_to :twitter %>
 			</div>
