--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,2 +1,29 @@
 <h1>Watches#show</h1>
 <p>Find me in app/views/watches/show.html.erb</p>
+
+
+<section class="watch_large">
+<!-- IMAGE -->
+</section>
+
+
+<section class="watch_info">
+	<h2><%= @watch.name %></h2>
+	<%= @watch.description %>
+	<div>
+		<span>Posted by <%# EMAIL OWNER OF WATCH %> </span>
+	</div>
+
+	<div class="action">
+
+		<%# if current owner? %>
+			<%= link_to "Edit", "#" %>
+			<%= link_to "Delete", "#" %>
+
+		<%# else %>
+			<%= number_to_curreny @watch.price, unit: "£" %>
+			<%= link_to "Buy", "#" %>	
+		<%# end %>
+	</div>
+
+</section>
