--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -4,6 +4,7 @@
 
 		<div class="watch"> 
 			<%= link_to watch do %>
+			<%= image_tag watch.image.url(:medium) %>
 			<!-- IMAGE -->
 				<%= link_to "#" do %>
 					<!-- PRICE -->
