--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,2 @@
-<%= simple_form_for @user do |f| %>
-	<%= f.input :email %> 
-	<%= f.input :password %> 
-	<%= f.input :password_confirmation %> 
-
-	<%= f.button :submit %>
-
-<% end %>
+<h2>SIGN UP</h2>
+<%= render "form" %>
