user edits forms

--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,26 +1,26 @@
-<section class="watch_large">
+<section class="watch__large">
 	<!-- IMAGE -->
 	<%= image_tag @watch.image.url(:medium) %>
 </section>
 
 
-<section class="watch_info">
+<section class="watch__info">
 	<h2><%= @watch.name %></h2>
 	<%= @watch.description %>
 	<div>
-		<span>Posted by <%# EMAIL OWNER OF WATCH %> </span>
+		<span>Posted by <%= mail_to @watch.user.email, @watch.user.first_name %></span>
 	</div>
 
 	<div class="action">
 
-		<%# if current owner? %>
-			<%= link_to "Edit", "#" %>
-			<%= link_to "Delete", "#" %>
+		<% if current_user_owns?(@watch) %>
+			<%= link_to "Edit", edit_watch_path(@watch) %>
+			<%= link_to "Delete", watch_path(@watch), method: :delete, class: "button" %>
 
-		<%# else %>
-			<%= number_to_currency @watch.price, unit: "£" %>
-			<%= link_to "Buy", "#" %>	
-		<%# end %>
+		<% else %>
+			<b><%= number_to_currency @watch.price, unit: "£" %></b>
+			<%= link_to "Buy", "#", class: "button" %>	
+		<% end %>
 	</div>
 
 </section>
