--- a/app/views/watches/new.html.erb
+++ b/app/views/watches/new.html.erb
@@ -1,14 +1,3 @@
-<%= simple_form_for @watch do |f| %>
+<h2>NEW WATCH</h2>
 
-	<%= f.input :name %>
-	<%= f.input :description %>
-	<%= f.input :price_in_pence %>
-	<%= f.input :style%>
-	<%= f.input :gender %>
-	<%= f.input :pre_owned %>
-	<%= f.input :brand %>
-	<%= f.input :image %>
-
-	<%= f.button :submit %>	
-
-<% end %>
+<%= render "form" %>
